kubernetes/apps/production/kanboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanboard
  namespace: kanboard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: kanban.0x69.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kanboard
                port:
                  number: 80
  tls:
    - hosts:
        - kanban.0x69.xyz
      secretName: kanboard-tls
